# fastapi-htmx-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
nginx/conf/: nginx.conf
src/: main.py
web/assets/css/: output.css
web/pages/: base.html
web/styles/: input.css
