[project]
name = "fastapi-htmx-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "jinja-partials>=0.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "supabase>=2.23.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
]
